istio/peerAuth.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: peerauth
  namespace: "knative-serving"
spec:
  mtls:
    mode: PERMISSIVE
