istio/keycloak-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: keycloak-ingress
  namespace: knative-eventing
spec:
  gateways:
  - knative-serving/knative-ingress-gateway
  hosts:
  - auth.eventhub.cloud.zeiss.com
  http:
  - route:
    - destination:
        host: keycloak.keycloak.svc.cluster.local
        port:
          number: 80
